force-app/main/default/objects/Account/fields/AverageMonthlyVolume__c.field-meta.xml
<CustomField>
    <fullName>AverageMonthlyVolume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>average monthly volume</description>
    <label>AverageMonthlyVolume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>