force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>IF(AverageMonthlyVolume__c &lt;= 100000, &quot;SME&quot;,
   IF(AverageMonthlyVolume__c &lt;= 299999, &quot;Tier 3&quot;,
    IF(AverageMonthlyVolume__c &lt;= 999999, &quot;Tier 2&quot;, &quot;Tier 1&quot;
       )  
      ) 
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>