force-app/main/default/objects/Account/fields/volumes__c.field-meta.xml
<CustomField>
    <fullName>volumes__c</fullName>
    <description>average monthly volume processed over the last 12 months</description>
    <label>volumes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>